[project]
name = "dev-aegis"
version = "0.1.0"
description = ""
authors = [
    {name = "hobbyist-programmer-ar",email = "hobbyistprogrammer@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"

[tool.poetry]
packages = [{include = "dev_aegis", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "^2.32.5"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]


[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
